@@ -211,6 +211,9 @@ typedef enum {
     CONF_LIST,			CONF_EFILE,		CONF_APPEND,
     CONF_OPTIONAL,
 
+    /* property */
+    CONF_HIDDEN,		CONF_VISIBLE,
+
     /* numbers */
     CONF_AMINFINITY,		CONF_MULT1,		CONF_MULT7,
     CONF_MULT1K,		CONF_MULT1M,		CONF_MULT1G,
@@ -881,96 +884,98 @@ static void    conf_parswarn(const char *format, ...)
 
 /* First, the keyword tables for client and server */
 keytab_t client_keytab[] = {
-    { "CONF", CONF_CONF },
-    { "AMDUMP_SERVER", CONF_AMDUMP_SERVER },
-    { "INDEX_SERVER", CONF_INDEX_SERVER },
-    { "TAPE_SERVER", CONF_TAPE_SERVER },
-    { "TAPEDEV", CONF_TAPEDEV },
-    { "AUTH", CONF_AUTH },
-    { "SSH_KEYS", CONF_SSH_KEYS },
     { "AMANDAD_PATH", CONF_AMANDAD_PATH },
+    { "AMANDATES", CONF_AMANDATES },
+    { "AMDUMP_SERVER", CONF_AMDUMP_SERVER },
+    { "APPEND", CONF_APPEND },
+    { "APPLICATION", CONF_APPLICATION },
+    { "APPLICATION_TOOL", CONF_APPLICATION_TOOL },
+    { "AUTH", CONF_AUTH },
+    { "CLIENT", CONF_CLIENT },
     { "CLIENT_NAME", CONF_CLIENT_NAME },
     { "CLIENT_USERNAME", CONF_CLIENT_USERNAME },
     { "CLIENT_PORT", CONF_CLIENT_PORT },
     { "CTIMEOUT", CONF_CTIMEOUT },
-    { "SSL_DIR", CONF_SSL_DIR },
-    { "SSL_CHECK_FINGERPRINT", CONF_SSL_CHECK_FINGERPRINT },
-    { "SSL_FINGERPRINT_FILE", CONF_SSL_FINGERPRINT_FILE },
-    { "SSL_CERT_FILE", CONF_SSL_CERT_FILE },
-    { "SSL_CHECK_HOST", CONF_SSL_CHECK_HOST },
-    { "SSL_CHECK_CERTIFICATE_HOST", CONF_SSL_CHECK_CERTIFICATE_HOST },
-    { "SSL_CIPHER_LIST", CONF_SSL_CIPHER_LIST },
-    { "SSL_KEY_FILE", CONF_SSL_KEY_FILE },
-    { "SSL_CA_CERT_FILE", CONF_SSL_CA_CERT_FILE },
-    { "GNUTAR_LIST_DIR", CONF_GNUTAR_LIST_DIR },
-    { "AMANDATES", CONF_AMANDATES },
-    { "KRB5KEYTAB", CONF_KRB5KEYTAB },
-    { "KRB5PRINCIPAL", CONF_KRB5PRINCIPAL },
-    { "INCLUDEFILE", CONF_INCLUDEFILE },
+    { "COMMENT", CONF_COMMENT },
+    { "CONF", CONF_CONF },
     { "CONNECT_TRIES", CONF_CONNECT_TRIES },
-    { "REP_TRIES", CONF_REP_TRIES },
-    { "REQ_TRIES", CONF_REQ_TRIES },
-    { "CLIENT", CONF_CLIENT },
-    { "DEBUG_DAYS", CONF_DEBUG_DAYS },
     { "DEBUG_AMANDAD", CONF_DEBUG_AMANDAD },
-    { "DEBUG_RECOVERY", CONF_DEBUG_RECOVERY },
     { "DEBUG_AMIDXTAPED", CONF_DEBUG_AMIDXTAPED },
     { "DEBUG_AMINDEXD", CONF_DEBUG_AMINDEXD },
     { "DEBUG_AMRECOVER", CONF_DEBUG_AMRECOVER },
     { "DEBUG_AUTH", CONF_DEBUG_AUTH },
-    { "DEBUG_EVENT", CONF_DEBUG_EVENT },
-    { "DEBUG_HOLDING", CONF_DEBUG_HOLDING },
-    { "DEBUG_PROTOCOL", CONF_DEBUG_PROTOCOL },
-    { "DEBUG_PLANNER", CONF_DEBUG_PLANNER },
+    { "DEBUG_CHUNKER", CONF_DEBUG_CHUNKER },
+    { "DEBUG_DAYS", CONF_DEBUG_DAYS },
     { "DEBUG_DRIVER", CONF_DEBUG_DRIVER },
     { "DEBUG_DUMPER", CONF_DEBUG_DUMPER },
-    { "DEBUG_CHUNKER", CONF_DEBUG_CHUNKER },
-    { "DEBUG_TAPER", CONF_DEBUG_TAPER },
+    { "DEBUG_EVENT", CONF_DEBUG_EVENT },
+    { "DEBUG_HOLDING", CONF_DEBUG_HOLDING },
+    { "DEBUG_PLANNER", CONF_DEBUG_PLANNER },
+    { "DEBUG_PROTOCOL", CONF_DEBUG_PROTOCOL },
+    { "DEBUG_RECOVERY", CONF_DEBUG_RECOVERY },
     { "DEBUG_SELFCHECK", CONF_DEBUG_SELFCHECK },
-    { "DEBUG_SENDSIZE", CONF_DEBUG_SENDSIZE },
     { "DEBUG_SENDBACKUP", CONF_DEBUG_SENDBACKUP },
+    { "DEBUG_SENDSIZE", CONF_DEBUG_SENDSIZE },
+    { "DEBUG_TAPER", CONF_DEBUG_TAPER },
+    { "DEFINE", CONF_DEFINE },
     { "EXECUTE_ON", CONF_EXECUTE_ON },
     { "EXECUTE_WHERE", CONF_EXECUTE_WHERE },
+    { "GNUTAR_LIST_DIR", CONF_GNUTAR_LIST_DIR },
+    { "HIDDEN", CONF_HIDDEN },
     { "HOSTNAME", CONF_HOSTNAME },
-    { "RESERVED_UDP_PORT", CONF_RESERVED_UDP_PORT },
-    { "RESERVED_TCP_PORT", CONF_RESERVED_TCP_PORT },
-    { "UNRESERVED_TCP_PORT", CONF_UNRESERVED_TCP_PORT },
-    { "DEFINE", CONF_DEFINE },
-    { "COMMENT", CONF_COMMENT },
+    { "INCLUDEFILE", CONF_INCLUDEFILE },
+    { "INDEX_SERVER", CONF_INDEX_SERVER },
+    { "INTER_LEVEL_RECOVER", CONF_INTER_LEVEL_RECOVER },
+    { "KRB5KEYTAB", CONF_KRB5KEYTAB },
+    { "KRB5PRINCIPAL", CONF_KRB5PRINCIPAL },
     { "MAILER", CONF_MAILER },
     { "ORDER", CONF_ORDER },
-    { "SCRIPT", CONF_SCRIPT },
-    { "SCRIPT_TOOL", CONF_SCRIPT_TOOL },
     { "PLUGIN", CONF_PLUGIN },
     { "PRE_AMCHECK", CONF_PRE_AMCHECK },
     { "PRE_DLE_AMCHECK", CONF_PRE_DLE_AMCHECK },
     { "PRE_HOST_AMCHECK", CONF_PRE_HOST_AMCHECK },
-    { "POST_AMCHECK", CONF_POST_AMCHECK },
-    { "POST_DLE_AMCHECK", CONF_POST_DLE_AMCHECK },
-    { "POST_HOST_AMCHECK", CONF_POST_HOST_AMCHECK },
     { "PRE_ESTIMATE", CONF_PRE_ESTIMATE },
     { "PRE_DLE_ESTIMATE", CONF_PRE_DLE_ESTIMATE },
     { "PRE_HOST_ESTIMATE", CONF_PRE_HOST_ESTIMATE },
+    { "PRE_BACKUP", CONF_PRE_BACKUP },
+    { "PRE_DLE_BACKUP", CONF_PRE_DLE_BACKUP },
+    { "PRE_HOST_BACKUP", CONF_PRE_HOST_BACKUP },
+    { "PRE_RECOVER", CONF_PRE_RECOVER },
+    { "PRE_LEVEL_RECOVER", CONF_PRE_LEVEL_RECOVER },
+    { "POST_AMCHECK", CONF_POST_AMCHECK },
+    { "POST_DLE_AMCHECK", CONF_POST_DLE_AMCHECK },
+    { "POST_HOST_AMCHECK", CONF_POST_HOST_AMCHECK },
     { "POST_ESTIMATE", CONF_POST_ESTIMATE },
     { "POST_DLE_ESTIMATE", CONF_POST_DLE_ESTIMATE },
     { "POST_HOST_ESTIMATE", CONF_POST_HOST_ESTIMATE },
     { "POST_BACKUP", CONF_POST_BACKUP },
     { "POST_DLE_BACKUP", CONF_POST_DLE_BACKUP },
     { "POST_HOST_BACKUP", CONF_POST_HOST_BACKUP },
-    { "PRE_BACKUP", CONF_PRE_BACKUP },
-    { "PRE_DLE_BACKUP", CONF_PRE_DLE_BACKUP },
-    { "PRE_HOST_BACKUP", CONF_PRE_HOST_BACKUP },
-    { "PRE_RECOVER", CONF_PRE_RECOVER },
     { "POST_RECOVER", CONF_POST_RECOVER },
-    { "PRE_LEVEL_RECOVER", CONF_PRE_LEVEL_RECOVER },
     { "POST_LEVEL_RECOVER", CONF_POST_LEVEL_RECOVER },
-    { "INTER_LEVEL_RECOVER", CONF_INTER_LEVEL_RECOVER },
     { "PRIORITY", CONF_PRIORITY },
     { "PROPERTY", CONF_PROPERTY },
-    { "APPLICATION", CONF_APPLICATION },
-    { "APPLICATION_TOOL", CONF_APPLICATION_TOOL },
+    { "REP_TRIES", CONF_REP_TRIES },
+    { "REQ_TRIES", CONF_REQ_TRIES },
+    { "RESERVED_UDP_PORT", CONF_RESERVED_UDP_PORT },
+    { "RESERVED_TCP_PORT", CONF_RESERVED_TCP_PORT },
+    { "SCRIPT", CONF_SCRIPT },
+    { "SCRIPT_TOOL", CONF_SCRIPT_TOOL },
     { "SERVER", CONF_SERVER },
-    { "APPEND", CONF_APPEND },
+    { "SSL_CA_CERT_FILE", CONF_SSL_CA_CERT_FILE },
+    { "SSL_CERT_FILE", CONF_SSL_CERT_FILE },
+    { "SSL_CHECK_CERTIFICATE_HOST", CONF_SSL_CHECK_CERTIFICATE_HOST },
+    { "SSL_CHECK_FINGERPRINT", CONF_SSL_CHECK_FINGERPRINT },
+    { "SSL_CHECK_HOST", CONF_SSL_CHECK_HOST },
+    { "SSL_CIPHER_LIST", CONF_SSL_CIPHER_LIST },
+    { "SSL_DIR", CONF_SSL_DIR },
+    { "SSL_FINGERPRINT_FILE", CONF_SSL_FINGERPRINT_FILE },
+    { "SSH_KEYS", CONF_SSH_KEYS },
+    { "SSL_KEY_FILE", CONF_SSL_KEY_FILE },
+    { "TAPE_SERVER", CONF_TAPE_SERVER },
+    { "TAPEDEV", CONF_TAPEDEV },
+    { "UNRESERVED_TCP_PORT", CONF_UNRESERVED_TCP_PORT },
+    { "VISIBLE", CONF_VISIBLE },
     { NULL, CONF_IDENT },
     { NULL, CONF_UNKNOWN }
 };
@@ -1076,6 +1081,7 @@ keytab_t server_keytab[] = {
     { "FIRSTFIT", CONF_FIRSTFIT },
     { "FULL", CONF_FULL },
     { "HANOI", CONF_HANOI },
+    { "HIDDEN", CONF_HIDDEN },
     { "HIGH", CONF_HIGH },
     { "HOLDINGDISK", CONF_HOLDING },
     { "IGNORE", CONF_IGNORE },
@@ -1233,6 +1239,7 @@ keytab_t server_keytab[] = {
     { "USE", CONF_USE },
     { "USETIMESTAMPS", CONF_USETIMESTAMPS },
     { "VAULT", CONF_VAULT },
+    { "VISIBLE", CONF_VISIBLE },
     { "VOLUME_ERROR", CONF_VOLUME_ERROR },
     { NULL, CONF_IDENT },
     { NULL, CONF_UNKNOWN }
@@ -4595,8 +4602,9 @@ read_property(
     gboolean set_seen = TRUE;
     property_t *property = malloc(sizeof(property_t));
     property_t *old_property;
-    property->append = 0; 
-    property->priority = 0; 
+    property->append = 0;
+    property->visible = 0;
+    property->priority = 0;
     property->values = NULL;
 
     get_conftoken(CONF_ANY);
@@ -4606,6 +4614,13 @@ read_property(
     }
     if (tok == CONF_APPEND) {
 	property->append = 1;
+	get_conftoken(CONF_ANY);
+    }
+    if (tok == CONF_HIDDEN) {
+	property->visible = 0;
+	get_conftoken(CONF_ANY);
+    } else if (tok == CONF_VISIBLE) {
+	property->visible = 1;
 	get_conftoken(CONF_ANY);
     }
     if (tok != CONF_STRING) {
